unpackaged/main/default/objects/Available_Integration__c/Available_Integration__c.object-meta.xml
<CustomObject>
    <label>Available Integration</label>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>