unpackaged/main/default/objects/Available_Integration__c/fields/Card_Vault_Feature__c.field-meta.xml
<CustomField>
    <fullName>Card_Vault_Feature__c</fullName>
    <label>Card Vault Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>