unpackaged/main/default/objects/Available_Integration__c/fields/Enabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Date__c</fullName>
    <label>Enabled Date</label>
    <type>DateTime</type>
</CustomField>