unpackaged/main/default/objects/Available_Integration__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>Populated by Workato, creates a connection between the brand system app and Salesforce when a new integration is available.</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>