unpackaged/main/default/objects/Available_Integration__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id for firm&#39;s integration (Firm UUID + Integration Name)</inlineHelpText>
    <label>Integration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>