unpackaged/main/default/objects/Available_Integration__c/fields/Integration_Owner__c.field-meta.xml
<CustomField>
    <fullName>Integration_Owner__c</fullName>
    <label>Integration Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Party</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>