unpackaged/main/default/objects/Available_Integration__c/fields/Legacy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Notes__c</fullName>
    <label>Legacy Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>