unpackaged/main/default/objects/Available_Integration__c/fields/MyCase_Id__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Id__c</fullName>
    <externalId>true</externalId>
    <label>MyCase Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>