unpackaged/main/default/objects/Available_Integration__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <formula>Partnership__r.Partner_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the name of the partnership Account name</inlineHelpText>
    <label>Partner Account</label>
    <type>Text</type>
</CustomField>