unpackaged/main/default/objects/Available_Integration__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <label>Partnership</label>
    <referenceTo>Partnerships__c</referenceTo>
    <relationshipLabel>Available Integrations</relationshipLabel>
    <relationshipName>Available_Integrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>