unpackaged/main/default/objects/Available_Integration__c/fields/Payment_Feature__c.field-meta.xml
<CustomField>
    <fullName>Payment_Feature__c</fullName>
    <label>Payment Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hosted Fields</fullName>
            </value>
            <value>
                <fullName>JS Tokenization</fullName>
            </value>
            <value>
                <fullName>Quick Bill</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>Titan Quick Bill</fullName>
            </value>
            <value>
                <fullName>Payment Page</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>