unpackaged/main/default/objects/Available_Integration__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>Woodpecker</fullName>
            </value>
            <value>
                <fullName>Soluno</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>