unpackaged/main/default/objects/Available_Integration__c/fields/Reconciliation_Feature__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Feature__c</fullName>
    <label>Reconciliation Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Origin Only</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>