unpackaged/main/default/objects/Available_Integration__c/fields/Signup_Feature__c.field-meta.xml
<CustomField>
    <fullName>Signup_Feature__c</fullName>
    <label>Signup Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Flow</fullName>
            </value>
            <value>
                <fullName>Our Flow</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>