unpackaged/main/default/objects/Available_Integration__c/fields/Uses_Cases_API__c.field-meta.xml
<CustomField>
    <fullName>Uses_Cases_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Cases API</label>
    <type>Checkbox</type>
</CustomField>