unpackaged/main/default/objects/Available_Integration__c/fields/Uses_Custom_Fields_API__c.field-meta.xml
<CustomField>
    <fullName>Uses_Custom_Fields_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Custom Fields API</label>
    <type>Checkbox</type>
</CustomField>