unpackaged/main/default/objects/Available_Integration__c/fields/Uses_Messaging_API__c.field-meta.xml
<CustomField>
    <fullName>Uses_Messaging_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Messaging API</label>
    <type>Checkbox</type>
</CustomField>