unpackaged/main/default/objects/Available_Integration__c/recordTypes/Software.recordType-meta.xml
<RecordType>
    <fullName>Software</fullName>
    <active>true</active>
    <label>Software</label>
</RecordType>