unpackaged/main/default/objects/Available_Integration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partnership__c</columns>
    <columns>Name__c</columns>
    <columns>Integration_Id__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>