unpackaged/main/default/objects/Available_Integration__c/listViews/MyCase_Integrations.listView-meta.xml
<ListView>
    <fullName>MyCase_Integrations</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>MyCase</value>
    </filters>
    <label>MyCase Integrations</label>
</ListView>